--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -3,3 +3,11 @@
 - name: waiting for server to come back after restart
   local_action: wait_for host={{ inventory_hostname }} port=22 state=started delay=20 timeout=90
   become: no
+
+
+- name: restart system
+  shell: ( /bin/sleep 5 ; shutdown -r now "Ansible updates triggered" ) &
+  async: 30
+  poll: 0
+  ignore_errors: true
+
