--- a/roles/gpdb4/vars/main.yml
+++ b/roles/gpdb4/vars/main.yml
@@ -2,7 +2,14 @@
 
 # if you change the version, Ansible will attempt a database upgrade
 
-# greenplum-db-4.3.9.0-build-1-rhel5-x86_64.zip
+# greenplum-db-4.3.8.0-build-1-RHEL5-x86_64.zip
+#gpdb_major_version: 4
+#gpdb_minor_version: 3.8.0
+#gpdb_build_version: 1
+#gpdb_rhel_name: 'RHEL5'
+
+
+# greenplum-db-4.3.9.0-build-1-RHEL5-x86_64.zip
 #gpdb_major_version: 4
 #gpdb_minor_version: 3.9.0
 #gpdb_build_version: 1
@@ -12,8 +19,14 @@
 # Note: the string 'RHEL' was made lowercase between 4.3.9.0 and 4.3.9.1
 
 # greenplum-db-4.3.9.1-build-1-rhel5-x86_64.zip
+#gpdb_major_version: 4
+#gpdb_minor_version: 3.9.1
+#gpdb_build_version: 1
+#gpdb_rhel_name: 'rhel5'
+
+
+# files/greenplum-db-4.3.11.1-build-1-rhel5-x86_64.zip
 gpdb_major_version: 4
-gpdb_minor_version: 3.9.1
+gpdb_minor_version: 3.11.1
 gpdb_build_version: 1
 gpdb_rhel_name: 'rhel5'
-
