--- a/update-host.yml
+++ b/update-host.yml
@@ -1,18 +1,22 @@
 ---
 
-# update packages to latest version
-- name: Update yum cache
-  yum: update_cache=yes
-  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+- hosts: all
+  become: yes
+  tasks:
 
-- name: upgrade all packages
-  yum: name=* state=latest update_cache=yes
-  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+  # update packages to latest version
+    #- name: Update yum cache
+    #  yum: update_cache=yes name
+    #  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
-- name: Update apt cache
-  apt: update_cache=yes
-  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+    - name: upgrade all packages
+      yum: name=* state=latest update_cache=yes
+      when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
-- name: Upgrade server
-  apt: upgrade=dist
-  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+    - name: Update apt cache
+      apt: update_cache=yes
+      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+
+    - name: Upgrade server
+      apt: upgrade=dist
+      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
