Add changes for recent Greenplum Database versions Add detection for Google Cloud Cleanup installation

--- a/roles/gpdb4/handlers/main.yml
+++ b/roles/gpdb4/handlers/main.yml
@@ -14,3 +14,9 @@
 
 - name: reload sysctl
   shell: /sbin/sysctl -p /etc/sysctl.conf
+
+
+- name: reload sshd
+  service:
+    name: sshd
+    state: reloaded
